add css changes

--- a/login.html
+++ b/login.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 
-    <div class="logo">
+
+
+    
+
+
+    <!-- <div class="logo">
         <img src="images/mansion.png" alt="logo of the company x">
     </div>
     <div>
@@ -33,7 +38,10 @@
        <p>
            &copy; 2017-2021
        </p>
-   </div>
+   </div> -->
     
+
+
+
 </body>
 </html>
