--- a/login.html
+++ b/login.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form-1</title>
     <link rel="stylesheet" href="css/style.css">
+   
+
 </head>
 <body>
 
 
-
-    
+    <div class="login-form">
+        <h1>Login Form</h1>
+        <form action="#" method="POST">
+            <input type="text" name="username" placeholder="username">
+                <input type="password" name="password" placeholder="password">
+                    <span>
+                        <input type="checkbox" name="checkbox">
+                            <label for="checkbox">remember</label>
+                        </span>
+                        <input type="submit" value="log in">
+                        </form>
+                    </div>
 
 
     <!-- <div class="logo">
@@ -41,7 +53,8 @@
    </div> -->
     
 
-
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <script src="./js/login.js"></script>
 
 </body>
 </html>
