--- a/index.html
+++ b/index.html
@@ -5,11 +5,215 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
+    <div class="container-fluid d-flex flex-column min-vh-100">
+        <div class="row logo-row">
+            <nav class="navbar navbar-expand-lg navbar-dark py-0">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html"><img
+                            src="./Images/logo/logo-mountain-adventure-black.jpg" alt="logo" width="210"
+                            class="d-inline-block align-text-top"></a>
+                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pricing.html">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./register.html">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./login.html">Login</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5">
+            <div class="card mt-5 p-0 carousel-1-and-description-card">
+                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button> -->
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/extreme_adventure/logo-mountain-adventure-black.jpg"
+                                class="d-block w-100" alt="Canada">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                                alt="Oceania">
+                        </div>
+                        <!-- <div class="carousel-item">
+                        <img src="./Images/carousel images/1920x600/switzerland_homepage_new.jpg"
+                            class="d-block w-100" alt="Switzerland">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Images/carousel images/1920x600/green-island-beach-background-1920x600-275.jpg"
+                            class="d-block w-100" alt="Bora-Bora">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
+                            alt="Japan"> -->
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Price</a>
+            </div>
+            <div class="card mt-5 p-0 carousel-2-and-description-card">
+                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button> -->
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/extreme_adventure/logo-mountain-adventure-black.jpg"
+                                class="d-block w-100" alt="Canada">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                                alt="Oceania">
+                        </div>
+                        <!-- <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/switzerland_homepage_new.jpg"
+                        class="d-block w-100" alt="Switzerland">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/green-island-beach-background-1920x600-275.jpg"
+                        class="d-block w-100" alt="Bora-Bora">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
+                        alt="Japan"> -->
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Price</a>
+            </div>
+            <div class="card mt-5 p-0 carousel-3-and-description-card">
+                <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button> -->
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                                alt="Canada">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                                alt="Oceania">
+                        </div>
+                        <!-- <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/switzerland_homepage_new.jpg"
+                        class="d-block w-100" alt="Switzerland">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/green-island-beach-background-1920x600-275.jpg"
+                        class="d-block w-100" alt="Bora-Bora">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
+                        alt="Japan"> -->
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Price</a>
+            </div>
+        </div>
+    </div>
+    <div class="row footer-row d-flex">
+        <p class=" footer-text mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-3 ps-4">© 2020 Copyright: Adventure Corp. All rights
+            reserved.</p>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
