--- a/login.html
+++ b/login.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form-1</title>
-    <link rel="stylesheet" href="css/style.css">
-   
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body>
-
-
-    <div class="login-form">
-        <h1>Login Form</h1>
-        <form action="#" method="POST">
-            <input type="text" name="username" placeholder="username">
-                <input type="password" name="password" placeholder="password">
-                    <span>
-                        <input type="checkbox" name="checkbox">
-                            <label for="checkbox">remember</label>
-                        </span>
-                        <input type="submit" value="log in">
-                        </form>
+    <div class="container-fluid d-flex flex-column min-vh-100">
+        <div class="row logo-row">
+            <nav class="navbar navbar-expand-lg navbar-dark py-0">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html"><img
+                            src="./Images/logo/logo-mountain-adventure-black.jpg" alt="logo" width="210"
+                            class="d-inline-block align-text-top"></a>
+                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pricing.html">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./register.html">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="./login.html">Login</a>
+                            </li>
+                        </ul>
                     </div>
+                </div>
+            </nav>
+        </div>
+        <div class="login-form">
+            <h1>Login Form</h1>
+            <form action="#" method="POST">
+                <input type="text" name="username" placeholder="username">
+                <input type="password" name="password" placeholder="password">
+                <span>
+                    <input type="checkbox" name="checkbox">
+                    <label for="checkbox">remember</label>
+                </span>
+                <input type="submit" value="log in">
+            </form>
+        </div>
 
 
-    <!-- <div class="logo">
+        <!-- <div class="logo">
         <img src="images/mansion.png" alt="logo of the company x">
     </div>
     <div>
@@ -51,10 +83,17 @@
            &copy; 2017-2021
        </p>
    </div> -->
-    
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-   <script src="./js/login.js"></script>
 
+
+    </div>
+    <div class="row footer-row d-flex fixed-bottom">
+        <p class=" footer-text mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-3 ps-4">© 2020 Copyright: Adventure Corp. All rights
+            reserved.</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
