--- a/login.html
+++ b/login.html
@@ -44,7 +44,9 @@
                 </div>
             </nav>
         </div>
-        <div class="login-form">
+
+
+        <!-- <div class="login-form">
             <h1>Login Form</h1>
             <form action="#" method="POST">
                 <input type="text" name="username" placeholder="username">
@@ -56,37 +58,15 @@
                 <input type="submit" value="log in">
             </form>
         </div>
+    </div> -->
 
-
-        <!-- <div class="logo">
-        <img src="images/mansion.png" alt="logo of the company x">
-    </div>
-    <div>
-        <h1>Please sign in</h1> 
-    </div>
-   <div class="email-input">
-       <input type="email" class="email-lenght" placeholder="Email address">
-   </div>
-   <div class="password-input">
-<input type="password" placeholder="Password" class="password-lenght">
-   </div>
-   <div class="remember-me">
-       <input type="checkbox" id="remember-me">
-       <label for="remember-me">Remember me</label>
-   </div>
-   <div class="btn">
-       <input type="submit" value="Sign in" class="button">
-   </div>
-
-   <div class="copyright">
-       <p>
-           &copy; 2017-2021
-       </p>
-   </div> -->
+    
 
 
 
-    </div>
+
+
+
     <div class="row footer-row d-flex fixed-bottom">
         <p class=" footer-text mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-3 ps-4">© 2020 Copyright: Adventure Corp. All rights
             reserved.</p>
