--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 </div>
             </nav>
         </div>
+        <header class="image-container">
+            <h1>Adrenaline Picker</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde nobis soluta possimus. Quos.</p>
+        </header>
+    
         <div class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5">
             <div class="card mt-5 p-0 carousel-1-and-description-card">
                 <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
