--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 alt="Oceania">
                         </div>
                         <!-- <div class="carousel-item">
-                        <img src="./Images/carousel images/1920x600/switzerland_homepage_new.jpg"
+                        <img src="./Images/loe"
                             class="d-block w-100" alt="Switzerland">
                     </div>
                     <div class="carousel-item">
