--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
   
 <main class="form-signin">
 <form>
-  <img class="mb-4" src="./images/logo/login-adventure-logo.jpg" alt="" width="280" height="280">
+  <!-- <img class="mb-4" src="./images/logo/login-adventure-logo.jpg" alt="" width="280" height="280"> -->
   <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
   <div class="form-floating">
