--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-
+    
 </head>
 
 <body>
@@ -48,11 +48,11 @@
 
         <!-- Custom styles for this template -->
     <link href="signin.css" rel="stylesheet">
-</head>
+
 <body class="text-center">
   
-<main class="form-signin">
-<form>
+<main class="form-signin sea">
+<form method="POST">
   <!-- <img class="mb-4" src="./images/logo/login-adventure-logo.jpg" alt="" width="280" height="280"> -->
   <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
