--- a/login.html
+++ b/login.html
@@ -47,38 +47,42 @@
 
 
         <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
-</head>
-<body class="text-center">
-  
-<main class="form-signin">
-<form>
-  <!-- <img class="mb-4" src="./images/logo/login-adventure-logo.jpg" alt="" width="280" height="280"> -->
-  <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <link href="signin.css" rel="stylesheet">
+        </head>
 
-  <div class="form-floating">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-    <label for="floatingInput">Email address</label>
-  </div>
-  <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-    <label for="floatingPassword">Password</label>
-  </div>
+        <body class="text-center">
 
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
-  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-</form>
-</main>
+            <main class="form-signin">
+                <form>
+                    <!-- <img class="mb-4" src="./images/logo/login-adventure-logo.jpg" alt="" width="280" height="280"> -->
+                    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
+                    <div class="form-floating">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div>
 
-
-    <div class="row footer-row d-flex fixed-bottom">
-        <p class=" footer-text mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-3 ps-4">© 2020 Copyright: Adventure Corp. All rights
-            reserved.</p>
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" value="remember-me"> Remember me
+                        </label>
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                </form>
+            </main>
+    </div>
+    <div class="row footer-row">
+        <div class="footer-text my-3 text-center">
+            <h5>Contacts</h5>
+            <p>info@adrenalinepicker.com</p>
+            <p>+371 22000009</p>
+            <p>Rīgas street 5, Rīga, Latvia</p>
+            <p>© 2021s Copyright: Adventure Corp. All rights reserved.</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
