--- a/register.html
+++ b/register.html
@@ -46,13 +46,6 @@
         </div>
         <div class="row register-middle-content min-vh-100 ">
             <div class="col pt-3">
-                <nav class="mx-xs-0 mx-sm-2 mx-md-3 mx-lg-3 mx-xl-5 my-4 px-sm-0 px-md-3"
-                    style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Register</li>
-                    </ol>
-                </nav>
                 <div class="row mx-3 mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-4">
                     <h3>Register</h3>
                 </div>
@@ -111,9 +104,13 @@
     </div>
 
     <div class="row footer-row">
-        <p class="footer-text mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-3 ps-4">© 2020 Copyright: Adventure Corp. All
-            rights
-            reserved.</p>
+        <div class="footer-text my-3 text-center">
+            <h5>Contacts</h5>
+            <p>info@adrenalinepicker.com</p>
+            <p>+371 22000009</p>
+            <p>Rīgas street 5, Rīga, Latvia</p>
+            <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
