--- a/index.html
+++ b/index.html
@@ -57,34 +57,34 @@
                             class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
-                        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button> -->
+                        aria-label="Slide 5"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/extreme_adventure/logo-mountain-adventure-black.jpg"
+                            <img src="./images/low_adrenaline_adventure/136.jpg"
                                 class="d-block w-100" alt="Canada">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                            <img src="./images/low_adrenaline_adventure/2521984197.jpg" class="d-block w-100"
                                 alt="Oceania">
                         </div>
-                        <!-- <div class="carousel-item">
-                        <img src="./Images/loe"
+                        <div class="carousel-item">
+                        <img src="./Images/low_adrenaline_adventure/gYnm1l.jpg"
                             class="d-block w-100" alt="Switzerland">
                     </div>
                     <div class="carousel-item">
-                        <img src="./Images/carousel images/1920x600/green-island-beach-background-1920x600-275.jpg"
+                        <img src="./Images/low_adrenaline_adventure/scorpio.jpg"
                             class="d-block w-100" alt="Bora-Bora">
                     </div>
-                    <div class="carousel-item">
+                    <!-- <div class="carousel-item">
                         <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
-                            alt="Japan"> -->
-                    </div>
+                            alt="Japan">
+                    </div> -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
@@ -105,39 +105,59 @@
             </div>
             <div class="card mt-5 p-0 carousel-2-and-description-card">
                 <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
+                    <!-- <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+                    </div> -->
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
-                        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button> -->
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
                     </div>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+                </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/extreme_adventure/logo-mountain-adventure-black.jpg"
+                            <img src="./images/medium_adventure/1535386447article_img.jpg"
                                 class="d-block w-100" alt="Canada">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/logo/logo-mountain-adventure-black.jpg" class="d-block w-100"
+                            <img src="./images/medium_adventure/3ZT0dn.jpg" class="d-block w-100"
                                 alt="Oceania">
                         </div>
-                        <!-- <div class="carousel-item">
-                    <img src="./Images/carousel images/1920x600/switzerland_homepage_new.jpg"
+                        <div class="carousel-item">
+                    <img src="./Images/medium_adventure/e77cc9e9-4f19db24df92ac01fb9e47786a2af831.jpg"
                         class="d-block w-100" alt="Switzerland">
                 </div>
                 <div class="carousel-item">
-                    <img src="./Images/carousel images/1920x600/green-island-beach-background-1920x600-275.jpg"
+                    <img src="./Images/medium_adventure/swimming-with-sharks_3-1024x576.jpg"
                         class="d-block w-100" alt="Bora-Bora">
                 </div>
-                <div class="carousel-item">
-                    <img src="./Images/carousel images/1920x600/japan.jpg" class="d-block w-100"
-                        alt="Japan"> -->
-                    </div>
+                <!-- <div class="carousel-item">
+                    <img src="./Images/medium_adventure/.jpg" class="d-block w-100"
+                        alt="Japan">
+                    </div> -->
+                    <div class="carousel-item">
+                        <img src="./Images/medium_adventure/u3.jpg" class="d-block w-100"
+                            alt="Japan">
+                        </div>
+    
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
