some text added

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
             </nav>
         </div>
         <header class="image-container">
-            <h1>Adrenaline Picker</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde nobis soluta possimus. Quos.</p>
+            <p><h1>Adrenaline Picker</h1></p>
+            <h6></h6>
+            <p><h6>Are you tired of daily routine? Are you looking for some new experience or new life approach? We are here for you! 
+            </h6></p>
+                <p><h6>Join our three-level complexity Adrenaline Picker program, choose one and embrace the world full of fascinating adventures.</h6></p>
+                <p><h4>Future is now.</h4></p>
         </header>
 
         <div class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5">
