--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid d-flex flex-column min-vh-100">
+    <div class="container-fluid d-flex flex-column min-vh-100 p-0">
         <div class="row logo-row">
             <nav class="navbar navbar-expand-lg navbar-dark py-0">
                 <div class="container-fluid">
@@ -44,9 +44,9 @@
                 </div>
             </nav>
         </div>
-        <div class="row form-signin sea d-flex flex-column min-vh-100">
-            <div class="col-3">
-                <form method="POST">
+        <div class="row form-signin sea d-flex min-vh-100 justify-content-center align-items-center">
+            <div class="col-3 align-middle">
+                <form method=" POST">
                     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
                     <div class="form-floating">
                         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
