--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid d-flex flex-column min-vh-100">
+    <div class="container-fluid d-flex flex-column min-vh-100 p-0">
         <div class="row logo-row">
             <nav class="navbar navbar-expand-lg navbar-dark py-0">
                 <div class="container-fluid">
@@ -45,7 +45,7 @@
             </nav>
         </div>
         <header
-            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center m-5">
+            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center m-5 p-1">
             <div class="col lh-lg">
                 <h1>Adrenaline Picker</h1>
                 
